Responsive UI fix extra margin right issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,3 +39,7 @@ pre, span {
   word-wrap: break-word;
   text-align: justify;
 }
+.col .row{
+  margin-left: 0;
+  margin-right:0;
+}
